# bfio2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg  setup.py  versioneer.py
cmake-modules/: FindFastLoader.cmake  FindHedgehog.cmake
src/bfio2/: UninitializedMemoryHacks.h  bfio_tile_loader.h  bioreader.h  main.cpp  ome_tiff_gs_strip_loader.h  ome_tiff_gs_tile_loader.h  ome_tiff_loader.cpp  ome_tiff_loader.h  ome_tiff_tile_loader.h  ome_zarr_loader.h  omezarr.h  sequence.h  utilities.cpp  utilities.h
src/bfio2/python/: __init__.py  backends.py  base_classes.py  bfio2.py  bfio2_interface.cpp  bioreader.py  make_binding.h  r01_x10_y05_z08.ome.tif  test_metadata.py  test_python.py
src/bfio2/python/bfio2/: __init__.py  _version.py  bioreader.py
tests/: CMakeLists.txt  testAll.cc  testDummy.h
tests/python/: test_bfio_perf.py  test_bioreader.py  test_vtile.py
